src/k8s/apps/glitchtip/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: glitchtip
  annotations:
    argocd.argoproj.io/sync-wave: "-3"
