src/k8s/apps/glitchtip/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: glitchtip
  labels:
    app.kubernetes.io/name: glitchtip
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: glitchtip
  ports:
    - name: http
      port: 8000
      targetPort: http
